@@ -31,7 +31,7 @@ MRfulltable(obj, by = 2, coef = NULL, number = 10, taxa = obj$taxa,
   "hommel", "bonferroni", "BH", "BY", "fdr", "none". See
   \code{\link{p.adjust}} for more details.}
 
-  \item{group}{One of three choices, 0,1,2. 0: the sort is
+  \item{group}{One of four choices: 0,1,2,3. 0: the sort is
   ordered by a decreasing absolute value coefficient fit.
   1: the sort is ordered by the raw coefficient fit in
   decreasing order. 2: the sort is ordered by the raw
@@ -39,8 +39,8 @@ MRfulltable(obj, by = 2, coef = NULL, number = 10, taxa = obj$taxa,
   ordered by the p-value of the coefficient fit in
   increasing order.}
 
-  \item{eff}{Restrict samples to have at least eff quantile
-  effective samples.}
+  \item{eff}{Restrict samples to have at least a "eff"
+  quantile effective samples.}
 
   \item{output}{Name of output file, including location, to
   save the table.}
@@ -73,6 +73,6 @@ head(MRfulltable(fit))
 }
 \seealso{
 \code{\link{fitZig}} \code{\link{MRcoefs}}
-\code{\link{MRtable}} \code{\link{MRfisher}}
+\code{\link{MRtable}} \code{\link{fitPA}}
 }
 
