@@ -1,6 +1,7 @@
 version 1.5.xx (2013-11-12)
 	+ Incorporating biome format support with the biom2MRexperiment and load_biome function.
-	+ Added filterData, aggregateByTaxonomy(aggTax) function.
+	+ Added filterData, aggregateByTaxonomy(aggTax), calculateEffectiveSamples, functions.
+	+ Renamed MRfisher to fitPA (presence-absence fisher test).
 version 1.2.xx (2013-08-20)
 	+ Our paper got accepted and is available!
         + Added methods for MRexperiment objects (colSums,colMeans,rowSums,rowMeans, usage is for example colSums(obj) or colSums(obj,norm=TRUE)) (09-25)
